# kboids

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: Boids.h  CMakeLists.txt  main.cpp  run.cpp  run.h
src/forge/: CMakeLists.txt
src/io/: CMakeLists.txt
src/time/: Timer.h
src/utils/: likwid-utils.h  sort-utils.h
src/version0/: Boids.cpp  Boids.h  CMakeLists.txt  main.cpp  readme_likwid.md  run.cpp  run.h
src/version1/: Array.h  Boids.cpp  Boids.h  CMakeLists.txt  main.cpp  readme_likwid.md  run.cpp  run.h  run_cpu.cpp  run_gpu.cpp  run_gui.h
src/version2/: Boids.cpp  CMakeLists.txt
